fixed info block height on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -196,7 +196,7 @@ $primary-color: #f44647;
         font-size: .7rem;
       }
       @include break-4 {
-        font-size: .5rem;
+        font-size: .6rem;
       }
     }
     a {
@@ -217,7 +217,7 @@ $primary-color: #f44647;
         height: 4rem;
       }
       @include break-4 {
-        height: 3rem;
+        height: 3.5rem;
       }
     }
     .left {
